# Feedback-Agent

./: .gitignore  README.md  main.py  pyproject.toml
core/: config.py
models/: db.py  schemas.py
services/: __init__.py  analysis.py  benchmark.py  feedback_points_extractor.py  summary.py  utils.py  whisper.py
